--- a/mysite/shopapp/templates/shopapp/base.html
+++ b/mysite/shopapp/templates/shopapp/base.html
@@ -19,7 +19,8 @@
 </div>
 <div>
     {% now 'l' as current_weekday %}
+    {% now 'd.m.Y' as curr_date %}
     Today is {{current_weekday}}<br>
-    Date: {{cur_date|date:"d.m.Y"}}
+    Date: {{curr_date}}
 </div>
 </html>
