Django project "mysite", 24.08.2023

--- a/mysite/shopapp/templates/shopapp/products-list.html
+++ b/mysite/shopapp/templates/shopapp/products-list.html
@@ -22,4 +22,7 @@
     {% else %}
         <h3>No products yet</h3>
     {% endif %}
+<div>
+    <a href="{% url 'shopapp:product_create' %}">Create product</a>
+</div>
 {% endblock %}
