--- a/mysite/shopapp/templates/shopapp/order_list.html
+++ b/mysite/shopapp/templates/shopapp/order_list.html
@@ -9,10 +9,11 @@
 {% block body %}
 <h1>Orders:</h1>
 <div>
-    {% if orders %}
+    {% if object_list %}
             <div>
-            {% for order in orders %}
+            {% for order in object_list %}
                 <div>
+                    <p><a href="{% url 'shopapp:order_details' pk=order.pk %}">Details #{{ order.pk }}</a></p>
                     <p>Order by: {% firstof order.user.first_name order.user.username %}</p>
                     <p>Promocode: <code>{{ order.promocode }}</code></p>
                     <p>Delivery address: {{ order.delivery_address }}</p>
@@ -34,4 +35,5 @@
 <div>
     <a href="{% url 'shopapp:order_create' %}">Create order</a>
 </div>
+<br>
 {% endblock %}
