Django project "mysite", 05.10.2023

--- a/permissions/mysite/myauth/templates/myauth/base.html
+++ b/permissions/mysite/myauth/templates/myauth/base.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>{% block title %}
+    <meta charset="UTF-8">
+    <title>
+        {% block title %}
 
-  {% endblock %}</title>
+        {% endblock title %}
+    </title>
 </head>
 <body>
-{% block body %}
+    {% block body %}
 
-{% endblock %}
+    {% endblock body %}
 </body>
 </html>
