--- a/permissions/mysite/shopapp/templates/shopapp/products-list.html
+++ b/permissions/mysite/shopapp/templates/shopapp/products-list.html
@@ -1,30 +1,38 @@
 {% extends 'shopapp/base.html' %}
 
 {% block title %}
-  Products list
+    Products list
 {% endblock %}
 
+
 {% block body %}
-  <h1>Products:</h1>
-  {% if products %}
-    <div>
-    {% for product in products %}
-      <div>
-        <p><a href="{% url 'shopapp:product_details' pk=product.pk %}"
-        >Name: {{ product.name }}</a></p>
-        <p>Price: {{ product.price }}</p>
-        <p>Discount: {% firstof product.discount 'no discount' %}</p>
-      </div>
-    {% endfor %}
-
-    </div>
-
-  {% else %}
-    <h3>No products yet</h3>
-  {% endif %}
-
-  <div>
-    <a href="{% url 'shopapp:product_create' %}"
-      >Create a new product</a>
-  </div>
+    <h1>Products:</h1>
+    {% if products %}
+        <div>
+            <ul>
+            {% for product in products %}
+                <div>
+                    <p>
+                        {% if perms.shopapp.add_product %}
+                            <a href="{% url 'shopapp:product_details' pk=product.pk %}">Name: {{product.name}}</a>
+                        {% else %}
+                            Name: {{product.name}}
+                        {% endif %}
+                    </p>
+                    <p>Price: {{product.price}}</p>
+                    <p>Discount: {% firstof product.discount "No discount" %}</p>
+                </div>
+            {% endfor %}
+            </ul>
+        </div>
+    {% else %}
+        <h3>No products yet</h3>
+    {% endif %}
+<br>
+<div>
+    {% if perms.shopapp.add_product %}
+        <a href="{% url 'shopapp:product_create' %}">Create product</a>
+    {% endif %}
+</div>
+<br>
 {% endblock %}
