--- a/permissions/mysite/shopapp/templates/shopapp/product_form.html
+++ b/permissions/mysite/shopapp/templates/shopapp/product_form.html
@@ -1,20 +1,21 @@
 {% extends 'shopapp/base.html' %}
 
 {% block title %}
-  Create product
+    Create product
 {% endblock %}
 
 {% block body %}
-  <h1>Create product</h1>
-  <div>
-    <form method="post">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit">Create</button>
+<h1>Create product:</h1>
+<div>
+    <form method = "post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Create</button>
     </form>
-  </div>
-  <div>
-    <a href="{% url 'shopapp:products_list' %}"
-    >Back to products list</a>
-  </div>
+</div>
+<br>
+<div>
+    <a href="{% url 'shopapp:products_list' %}">Back to products</a>
+</div>
+<br>
 {% endblock %}
