Django project "mysite", 13.10.2023

--- a/Testing/mysite/myauth/templates/myauth/login.html
+++ b/Testing/mysite/myauth/templates/myauth/login.html
@@ -2,15 +2,15 @@
 
 {% block title %}
   Login
-{% endblock %}
+{% endblock title %}
 
 {% block body %}
-
   <form method="post">
     {% csrf_token %}
 
     {{ form.as_p }}
-
     <button type="submit">Login</button>
   </form>
-{% endblock %}
+
+
+{% endblock body %}
