--- a/Testing/mysite/myauth/templates/myauth/register.html
+++ b/Testing/mysite/myauth/templates/myauth/register.html
@@ -2,7 +2,7 @@
 
 {% block title %}
   Register
-{% endblock %}
+{% endblock title %}
 
 {% block body %}
   <h1>Register</h1>
@@ -11,4 +11,5 @@
     {{ form.as_p }}
     <input type="submit" value="Register">
   </form>
-{% endblock %}
+
+{% endblock body %}
