--- a/Testing/mysite/myauth/templates/myauth/about-me.html
+++ b/Testing/mysite/myauth/templates/myauth/about-me.html
@@ -1,20 +1,22 @@
 {% extends 'myauth/base.html' %}
 
 {% block title %}
-  About me
-{% endblock %}
-
+    About me
+{% endblock title %}
 
 {% block body %}
-  <h1>User info</h1>
-  {% if user.is_authenticated %}
-    <h2>Detail</h2>
-    <p>Username: {{ user.username }}</p>
-    <p>First name: {{ user.first_name }}</p>
-    <p>Last name: {{ user.last_name }}</p>
-    <p>Email: {{ user.email }}</p>
-    <p>Bio: {{ user.profile.bio }}</p>
-  {% else %}
-    <h2>User is anonymous</h2>
-  {% endif %}
-{% endblock %}
+    <h1>User Info</h1>
+    {% if user.is_authenticated %}
+        <h2>Details:</h2>
+        <p>Username: {{ user.username }}</p>
+        <p>First name: {{ user.first_name }}</p>
+        <p>Last name: {{ user.last_name }}</p>
+        <p>Reg date: {{ user.date_joined }}</p>
+        <p>Email: {{ user.email }}</p>
+        <p>Bio: {{ user.profile.bio }}</p>
+    {% else %}
+        <h2>User is anonymous</h2>
+    {% endif %}
+
+
+{% endblock body %}
