--- a/Testing/mysite/shopapp/templates/shopapp/groups-list.html
+++ b/Testing/mysite/shopapp/templates/shopapp/groups-list.html
@@ -1,40 +1,39 @@
 {% extends 'shopapp/base.html' %}
 
+
 {% block title %}
-  Groups List
+  Groups list
 {% endblock %}
 
+
 {% block body %}
-  <h1>Groups:</h1>
+<h1>Groups:</h1>
+<div>
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Create</button>
+  </form>
+</div>
   <div>
-    <form method="post">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit">Create</button>
-    </form>
-  </div>
-  <div>
-  {% if not groups %}
-    <h3>No groups yet</h3>
-  {% else %}
+    {% if not groups %}
+    <h3>No groups yet!</h3>
+    {% else %}
     <ul>
-
       {% for group in groups %}
-          <li>
-            <div>{{ group.name }}</div>
-            <ul>
-              {% for permission in group.permissions.all %}
-                <li>
-                  {{ permission.name }}
-                  (<code>{{ permission.codename }}</code>)
-                </li>
-              {% endfor %}
-
-            </ul>
-          </li>
+        <li>
+          <div>{{group.name}}</div>
+          <ul>
+            {% for permission in group.permissions.all %}
+            <li>
+              {{permission.name}}
+              <code>({{permission.codename}})</code>
+            </li>
+            {% endfor %}
+          </ul>
+        </li>
       {% endfor %}
-
     </ul>
-  {% endif %}
+    {% endif %}
   </div>
 {% endblock %}
