--- a/Testing/mysite/shopapp/templates/shopapp/order_update_form.html
+++ b/Testing/mysite/shopapp/templates/shopapp/order_update_form.html
@@ -1,21 +1,21 @@
 {% extends 'shopapp/base.html' %}
 
 {% block title %}
-    Create product
+    Update order
 {% endblock %}
 
 {% block body %}
-<h1>Create product:</h1>
+<h1>Update order:</h1>
 <div>
     <form method = "post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Create</button>
+        <button type="submit">Update</button>
     </form>
 </div>
 <br>
 <div>
-    <a href="{% url 'shopapp:products_list' %}">Back to products</a>
+    <a href="{% url 'shopapp:order_details' pk=object.pk %}">Back to order #{{ object.pk }}</a>
 </div>
 <br>
 {% endblock %}
