--- a/mysite/shopapp/templates/shopapp/products-detail.html
+++ b/mysite/shopapp/templates/shopapp/products-detail.html
@@ -13,6 +13,20 @@
   <div>Price: {{ product.price }}</div>
   <div>Discount: {{ product.discount }}</div>
   <div>Archived: {{ product.archived }}</div>
+  {% if product.preview %}
+    <img src="{{ product.preview.url }}" alt="{{ product.preview.name }}">
+  {% endif %}
+  <h3>Images:</h3>
+    <div>
+      {% for img in product.images.all %}
+        <div>
+          <img src="{{ img.image.url }}" alt="{{ img.image.name }}">
+          <div>{{ img.description }}</div>
+        </div>
+      {% empty %}
+        <div>No images uploaded yet</div>
+      {% endfor %}
+    </div>
 </div>
 <br>
 <div>
