--- a/mysite/shopapp/templates/shopapp/products-list.html
+++ b/mysite/shopapp/templates/shopapp/products-list.html
@@ -21,6 +21,9 @@
                     </p>
                     <p>Price: {{product.price}}</p>
                     <p>Discount: {% firstof product.discount "No discount" %}</p>
+                    {% if product.preview %}
+                        <img src="{{ product.preview.url }}" alt="{{ product.preview.name }}">
+                    {% endif %}
                 </div>
             {% endfor %}
             </ul>
