--- a/i18n_l10n/mysite/shopapp/templates/shopapp/products-details.html
+++ b/i18n_l10n/mysite/shopapp/templates/shopapp/products-details.html
@@ -1,41 +1,55 @@
 {% extends 'shopapp/base.html' %}
 
+{% load i18n %}
+
 {% block title %}
-  Product #{{ product.pk }}
+  {% translate 'Product' %} #{{ product.pk }}
 {% endblock %}
 
 {% block body %}
-  <h1>Product <strong>{{ product.name }}</strong></h1>
+  <h1>{% translate 'Product' %} <strong>{{ product.name }}</strong></h1>
   <div>
-    <div>Description: <em>{{ product.description }}</em></div>
-    <div>Price: {{ product.price }}</div>
-    <div>Discount: {{ product.discount }}</div>
-    <div>Archived: {{ product.archived }}</div>
+    <div>{% translate 'Description' %}: <em>{{ product.description }}</em></div>
+    <div>{% translate 'Price' %}: {{ product.price }}</div>
+    <div>{% translate 'Discount' %}: {{ product.discount }}</div>
+    <div>{% translate 'Archived' %}: {{ product.archived }}</div>
 
     {% if product.preview %}
       <img src="{{ product.preview.url }}" alt="{{ product.preview.name }}">
     {% endif %}
 
-    <h3>Images:</h3>
+    <h3>{% translate 'Images' %}:</h3>
     <div>
+      {% blocktranslate count images_count=product.images.all|length %}
+        There is only one image.
+        {% plural %}
+        There are {{ images_count }} images.
+      {% endblocktranslate %}
       {% for img in product.images.all %}
         <div>
           <img src="{{ img.image.url }}" alt="{{ img.image.name }}">
           <div>{{ img.description }}</div>
         </div>
       {% empty %}
-        <div>No images uploaded yet</div>
+        <div>{% translate 'No images uploaded yet' %}</div>
       {% endfor %}
 
     </div>
   </div>
-  <div>
-    <a href="{% url 'shopapp:product_update' pk=product.pk %}">Update product</a>
-  </div>
-  <div>
-    <a href="{% url 'shopapp:product_delete' pk=product.pk %}">Archive product</a>
-  </div>
-  <div>
-    <a href="{% url 'shopapp:products_list' %}">Back to products list</a>
-  </div>
+
+  {% url 'shopapp:product_update' pk=product.pk as upd_url %}
+  {% url 'shopapp:product_delete' pk=product.pk as del_url %}
+  {% url 'shopapp:products_list' as prod_list_url %}
+  {% blocktranslate %}
+    <div>
+      <a href="{{ upd_url }}">Update product</a>
+    </div>
+    <div>
+      <a href="{{ del_url }}">Archive product</a>
+    </div>
+    <div>
+      <a href="{{ prod_list_url }}">Back to products list</a>
+    </div>
+  {% endblocktranslate %}
+
 {% endblock %}
