--- a/mysite/shopapp/templates/shopapp/products-list.html
+++ b/mysite/shopapp/templates/shopapp/products-list.html
@@ -1,26 +1,37 @@
 {% extends 'shopapp/base.html' %}
 
+{% load i18n %}
+
 {% block title %}
-    Products list
+    {% translate 'Products list' %}
 {% endblock %}
 
 
 {% block body %}
-    <h1>Products:</h1>
+    <h1>{% translate 'Products' %}:</h1>
     {% if products %}
+        <div>
+        {% blocktranslate count products_count=products|length %}
+            There is only one product.
+            {% plural %}
+            There are {{ products_count }} products.
+        {% endblocktranslate %}
+        </div>
         <div>
             <ul>
             {% for product in products %}
                 <div>
                     <p>
                         {% if perms.shopapp.add_product %}
-                            <a href="{% url 'shopapp:product_details' pk=product.pk %}">Name: {{product.name}}</a>
+                            <a href="{% url 'shopapp:product_details' pk=product.pk %}">
+                                {% translate 'Name' context 'product name' %}: {{product.name}}</a>
                         {% else %}
-                            Name: {{product.name}}
+                            {% translate 'Name' context 'product name' %}: {{product.name}}
                         {% endif %}
                     </p>
-                    <p>Price: {{product.price}}</p>
-                    <p>Discount: {% firstof product.discount "No discount" %}</p>
+                    <p>{% translate 'Price' %}: {{product.price}}</p>
+                    {% translate 'no discount' as no_discount %}
+                    <p>{% translate 'Discount' %}: {% firstof product.discount no_discount %}</p>
                     {% if product.preview %}
                         <img src="{{ product.preview.url }}" alt="{{ product.preview.name }}">
                     {% endif %}
@@ -28,14 +39,21 @@
             {% endfor %}
             </ul>
         </div>
+
+        <div>
+            {% if perms.shopapp.add_product %}
+                <a href="{% url 'shopapp:product_create' %}">{% translate 'Create product' %}</a>
+            {% endif %}
+        </div>
+
     {% else %}
-        <h3>No products yet</h3>
+        {% url 'shopapp:product_create' as create_product_url %}
+        {% blocktranslate %}
+            <h3>No products yet</h3>
+            <a href="{{create_product_url}}">Create a new one</a>
+        {% endblocktranslate %}
     {% endif %}
 <br>
-<div>
-    {% if perms.shopapp.add_product %}
-        <a href="{% url 'shopapp:product_create' %}">Create product</a>
-    {% endif %}
-</div>
+
 <br>
 {% endblock %}
