--- a/mysite/shopapp/templates/shopapp/shop-index.html
+++ b/mysite/shopapp/templates/shopapp/shop-index.html
@@ -25,6 +25,13 @@
             {% endfor %}
         </ul>
     </div>
+
+    <div>
+        <strong>
+            You have {{ items }} cherr{{ items|pluralize:"y,ies" }}
+        </strong>
+    </div>
+
     <div>Time running: {{time_running}} </div>
     <div> {% lorem 5 p %} </div>
 {% endblock %}
