Django project "mysite", 06.12.2023

--- a/mysite/myauth/templates/myauth/about-me.html
+++ b/mysite/myauth/templates/myauth/about-me.html
@@ -1,4 +1,5 @@
 {% extends 'myauth/base.html' %}
+{% load cache %}
 
 {% block title %}
     About me
@@ -6,7 +7,9 @@
 
 {% block body %}
     <h1>User Info</h1>
+    <div>Products available: {% now "u" %}</div>
     {% if user.is_authenticated %}
+        {% cache 300 userinfo user.username %}
         <h2>Details:</h2>
         <p>Username: {{ user.username }}</p>
         <p>First name: {{ user.first_name }}</p>
@@ -15,6 +18,7 @@
         <p>Email: {{ user.email }}</p>
         <p>Bio: {{ user.profile.bio }}</p>
         <p>Agreement_accepted: {{ user.profile.agreement_accepted }}</p>
+        {% endcache %}
         {% if user.profile.avatar %}
             <img src="{{ user.profile.avatar.url }}" alt="profile avatar">
             <p>Avatar: {{ user.profile.avatar }}</p>
