--- a/mysite/requestdataapp/templates/requestdataapp/base.html
+++ b/mysite/requestdataapp/templates/requestdataapp/base.html
@@ -14,9 +14,9 @@
        {% endblock %}
 
 <br>
-<div>
-    HTTP User-Agent = {{request.user_agent}}
-</div>
+<!--<div>-->
+<!--    HTTP User-Agent = {{request.user_agent}}-->
+<!--</div>-->
 </body>
 
 </html>
